# emailingsystem-server

./: .gitmodules  CMakeLists.txt  IDbConnection.h  Server.cpp  Server.h  dbconnection.cpp  dbconnection.h  main.cpp  receiver.h  serverservice.cpp  serverservice.h  tests.cpp  tests.h
cmake/: AddGitSubmodule.cmake
